# weather-widget

./: CMakeLists.txt  README.md  main.cpp
src/: main.cpp
src/abstract/: AApiDataProvider.cpp  AApiDataProvider.h  ADataProvider.cpp  ADataProvider.h  AWeatherPlot.cpp  AWeatherPlot.h
src/config/: Config.h  ConfigFileManager.cpp  ConfigFileManager.h
src/data/: WundergroundDataSchema.h
src/data/api/: WundergroundDataProvider.cpp  WundergroundDataProvider.h
src/interface/: IWeatherPlot.h
src/plot/: HumidityPlot.cpp  HumidityPlot.h  TemperaturePlot.cpp  TemperaturePlot.h
src/render/: Renderer.cpp  Renderer.h
